argo-cd/ksops-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      # Mount the age key for SOPS decryption
      volumes:
        - name: custom-tools
          emptyDir: {}
        - name: sops-age-key
          secret:
            secretName: sops-age-key
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - mountPath: /custom-tools
              name: custom-tools
            - mountPath: /.config/sops/age/keys.txt
              name: sops-age-key
              subPath: keys.txt
