argo-cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ui
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: GitOps Deployment
    gethomepage.dev/group: Development
    gethomepage.dev/icon: argo.png
    gethomepage.dev/name: Argo CD
    gethomepage.dev/widget.type: "argo"
    gethomepage.dev/widget.url: "argo.homelab"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argo.homelab
    secretName: argocd-secret
  rules:
  - host: argo.homelab
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              name: https
